--- a/src/app/not-found.module.css
+++ b/src/app/not-found.module.css
@@ -29,7 +29,7 @@
 }
 
 .errorCode {
-  font-size: 8em;
+  font-size: 8em !important;
   line-height: 0.8;
 }
 .message {
